# app_users_fastapi

./: docker-compose.yml  pyproject.toml
backend/: .env.template  main.py
backend/actions/: create_superuser.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_07_21_1834-e408069d7397_create_users_table.py  2024_07_21_1936-be3ccdc76003_create_users_table.py  2024_07_21_1937-a00e012f6fbc_create_access_tokens_table.py  2024_07_22_0620-ef4a03798097_create_access_tokens_table.py
backend/api/api_v1/: __init__.py  auth.py  fastapi_users.py  user.py
backend/api/dependencies/: access_tokens.py  backend.py
backend/api/dependencies/authentication/: fastapi_users.py  strategy.py  user_manager.py  users.py
backend/certs/: README.md
backend/core/: config.py
backend/core/authentication/: transport.py  user_manager.py
backend/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
backend/core/models/mixins/: __init__.py  int_pk.py
